# acf-demo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  start.sh
backend/: .example-env  Dockerfile  main.py  pyproject.toml
frontend/: .example-env  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
